# Netcpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt
app/filedownloader/: CMakeLists.txt  client.cc  uploader.cc  uploader.h  utils.h
app/proxy/: CMakeLists.txt  http_proxy.cc
app/staticFs/: CMakeLists.txt  main.cc
src/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  CallbackInterface.h  Connection.cc  Connection.h  EventLoopThread.cc  EventLoopThread.h  TcpClient.cc  TcpClient.h  TcpServer.cc  TcpServer.h
src/http/: HttpRequest.cc  HttpRequest.h  HttpResponse.cc  HttpResponse.h  HttpServer.cc  HttpServer.h  Type.cc  Type.h
src/protobuf/: Codec.cc  Codec.h  Dispatcher.cc  Dispatcher.h  ProtoClient.cc  ProtoClient.h  ProtoServer.cc  ProtoServer.h  Requestor.cc  Requestor.h  UUID.h
tests/: CMakeLists.txt  test1.cc  test_crc32.cc  test_http_server.cc  test_proto.cc  test_proto_client.cc  test_proto_server.cc  test_tcp_server.cc
tests/proto/: test.proto  test_req.proto  test_resp.proto
